Remove paths.el
* lisp/info.el (Info-default-directory-list): Move here from paths.el.
* lisp/paths.el: Remove file, which is now empty.
* lisp/loadup.el: No longer load "paths".

* src/lisp.mk (lisp): Remove paths.elc.

* lib-src/makefile.w32-in (lisp2): Remove paths.el.

* INSTALL: Remove references to paths.el.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-27  Glenn Morris  <rgm@gnu.org>
+
+	* INSTALL: Remove references to paths.el.
+
 2012-06-26  Eli Zaretskii  <eliz@gnu.org>
 
 	* lib/makefile.w32-in ($(GNULIBOBJS)): Depend on stamp_BLD.  This
