--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-27  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/easy-mmode.el (easy-mmode-pretty-mode-name):
+	Strip "toggle-" if any.
+
 2012-06-27  Glenn Morris  <rgm@gnu.org>
 
 	* info.el (Info-default-directory-list): Move here from paths.el.
