--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,11 @@
 2012-06-27  Dmitry Antipov  <dmantipov@yandex.ru>
 
+	* alloc.c (allocate_string_data): Remove dead code.
+	* xsettings.c (XSETTINGS_FONT_NAME): Move under HAVE_XFT to
+	avoid GCC warning about unused macro.
+
+2012-06-27  Dmitry Antipov  <dmantipov@yandex.ru>
+
 	* alloc.c (allocate_string): Omit intervals initialization.
 	* alloc.c (make_uninit_multibyte_string): Initialize intervals
 	as in make_pure_string and make_pure_c_string.
