Get rid of all the manual purecopy calls in menu-bar definitions. * lisp/loadup.el (purify-flag): Pre-grow the hash-table to reduce the memory use. * lisp/bindings.el (bindings--define-key): New function. * lisp/vc/vc-hooks.el, lisp/replace.el, lisp/menu-bar.el: * lisp/international/mule-cmds.el, lisp/emacs-lisp/lisp-mode.el: * lisp/buff-menu.el, lisp/bookmark.el: * bindings.el: Use it to purecopy define-key bindings. * src/fns.c (maybe_resize_hash_table): Output message when growing the purify-hashtable.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,12 @@
 2012-06-27  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* loadup.el (purify-flag): Pre-grow the hash-table to reduce the
+	memory use.
+	* bindings.el (bindings--define-key): New function.
+	* vc/vc-hooks.el, replace.el, menu-bar.el, international/mule-cmds.el:
+	* emacs-lisp/lisp-mode.el, buff-menu.el, bookmark.el:
+	* bindings.el: Use it to purecopy define-key bindings.
+
 	* textmodes/rst.el (rst-adornment-faces-alist): Avoid copy-list.
 
 	* emacs-lisp/cl.el (flet): Mark obsolete.
