* configure.in: Only check for paxctl on gnu-linux.
http://debbugs.gnu.org/11398#26

NetBSD has a "paxctl" that does not support the same options
as the GNU/Linux version...

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-06-27  Glenn Morris  <rgm@gnu.org>
 
+	* configure.in: Only check for paxctl on gnu-linux.  (Bug#11398#26)
+
 	* INSTALL: Remove references to paths.el.
 
 2012-06-26  Eli Zaretskii  <eliz@gnu.org>
