--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,22 @@
 2012-06-28  Dmitry Antipov  <dmantipov@yandex.ru>
 
+	* dispextern.h (GLYPH_DEBUG): Now defined in config.h if
+	enabled with --enable-checking=[all,glyphs] configure option.
+	Fix GLYPH_DEBUG usage assuming that it may be undefined,
+	adjust comments accordingly.
+	* dispnew.c: Fix GLYPH_DEBUG usage assuming that it may be
+	undefined, adjust comments accordingly.
+	* image.c: Likewise.
+	* scroll.c: Likewise.
+	* w32fns.c: Likewise.
+	* w32term.c: Likewise.
+	* xdisp.c: Likewise.
+	* xfaces.c: Likewise.
+	* xfns.c: Likewise.
+	* xterm.c: Likewise.
+
+2012-06-28  Dmitry Antipov  <dmantipov@yandex.ru>
+
 	Generalize run-time debugging checks.
 	* dispextern.h (XASSERTS): Remove.
 	* fontset.c (xassert): Remove.
