--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-28  Juanma Barranquero  <lekktu@gmail.com>
+
+	* nmake.defs (CHECKING_CFLAGS):
+	* gmake.defs (CHECKING_CFLAGS): Remove XASSERTS.
+
 2012-06-24  Eli Zaretskii  <eliz@gnu.org>
 
 	* config.nt (_Noreturn): Don't reference __SUNPRO_C.
