--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-28  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/regex.$(O)): Update dependencies.
+
 2012-06-28  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* window.h (struct window): Change type of 'use_time' and
