--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-28  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* calendar/cal-dst.el (calendar-current-time-zone): Return
+	calendar-current-time-zone-cache if non-nil.
+
 2012-06-25  Masatake YAMATO  <yamato@redhat.com>
 
 	* progmodes/which-func.el (which-func-format):
