--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+2012-06-28  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* window.h (struct window): Change type of 'hscroll',
+	'min_hscroll' and 'last_point' from Lisp_Object to ptrdiff_t,
+	'last_modified' and 'last_overlay_modified' to EMACS_INT.
+	Adjust users accordingly.
+	* xdisp.c (try_cursor_movement): Replace type check with eassert.
+	* window.c (Fscroll_left, Fscroll_right): Change type of 'hscroll'
+	from EMACS_INT to ptrdiff_t.
+	(make_window): Omit redundant initialization.
+
 2012-06-28  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in ($(BLD)/regex.$(O)): Update dependencies.
