--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-28  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Avoid integer overflow on scroll-left and scroll-right.
+	* window.c (HSCROLL_MAX): New macro.
+	(Fscroll_left, Fscroll_right): Avoid undefined behavior on integer
+	overflow when requested scroll falls outside ptrdiff_t range.
+
 2012-06-28  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* window.h (struct window): Change type of 'hscroll',
