* nsfns.m: Fix GLYPH_DEBUG usage assuming that it may be undefined.  Convert from xassert to eassert. * nsmenu.m: Convert from xassert to eassert. * nsterm.m: Likewise.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-29  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* nsfns.m: Fix GLYPH_DEBUG usage assuming that it may be
+	undefined.  Convert from xassert to eassert.
+	* nsmenu.m: Convert from xassert to eassert.
+	* nsterm.m: Likewise.
+
 2012-06-28  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* editfns.c (region_limit): Clip to narrowing (bug#11770).
