lisp/gnus/tests/: Remove

--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-29  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* tests/gnustest-nntp.el, tests/gnustest-registry.el, tests/: Remove.
+
 2012-06-27  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* shr.el (shr-render-buffer): New command.
