--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-29  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/ange-ftp.el (ange-ftp-get-passwd): Throw if `non-essential'
+	is non-nil.
+	(ange-ftp-ignore-errors-if-non-essential): New defmacro.
+	(ange-ftp-file-name-all-completions): Use it.  (Bug#11808)
+
 2012-06-29  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* calendar/cal-dst.el (calendar-current-time-zone):
