* lisp/fringe.el (fringe-mode): Doc fix. * src/window.h (struct window): Change type of 'fringes_outside_margins' to bitfield.  Fix comment.  Adjust users accordingly. (struct window): Change type of 'window_end_bytepos' to ptrdiff_t. Adjust comment. * src/xdisp.c (try_window_id): Change type of 'first_vpos' and 'vpos' to ptrdiff_t.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-29  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* fringe.el (fringe-mode): Doc fix.
+
 2012-06-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/ange-ftp.el (ange-ftp-get-passwd): Throw if `non-essential'
