--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2012-06-29  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* window.h (struct window): Change type of 'fringes_outside_margins'
+	to bitfield.  Fix comment.  Adjust users accordingly.
+	(struct window): Change type of 'window_end_bytepos' to	ptrdiff_t.
+	Adjust comment.
+	* xdisp.c (try_window_id): Change type of 'first_vpos' and 'vpos'
+	to ptrdiff_t.
+
 2012-06-29  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* gnutls.c (emacs_gnutls_handshake):
