--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-30  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* lisp.h (CHECK_RANGED_INTEGER): Make value to check the first
+	argument.
+	* character.c, charset.c, menu.c, process.c, window.c: Adjust all
+	uses.
+
 2012-06-29  Eli Zaretskii  <eliz@gnu.org>
 
 	* xdisp.c (try_window_id): Undo last change.
