--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-30  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/cl-lib.el: Require macroexp for its macros.
+
 2012-06-30  Chong Yidong  <cyd@gnu.org>
 
 	* xml.el: Implement XML parameter entities.
