--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,24 @@
+2012-06-30  Eli Zaretskii  <eliz@gnu.org>
+
+	* sysselect.h [DOS_NT]: Don't include sys/select.h.
+
+	* s/ms-w32.h (select, pselect): Don't define here, they are
+	defined in sysselect.h
+
+	* sysselect.h (pselect) [!HAVE_PSELECT]: Redirect to sys_select.
+
+	* sysdep.c: Don't include dos.h and dosfns.h.
+
+	* process.c (sys_select):
+	* msdos.c (sys_select): Accept one more argument and ignore it.
+
+	* msdos.c (event_timestamp, sys_select): Use gnulib's gettime;
+	adapt data types and code to that.
+
+	* dosfns.c:
+	* msdos.c (gettime, settime): Define away the prototypes in dos.h,
+	which clashes with the gnulib function of the same name.
+
 2012-06-29  Eli Zaretskii  <eliz@gnu.org>
 
 	* xdisp.c (try_window_id): Undo last change.
