Make --no-site-lisp work for --enable-locallisppath elements without "site-lisp" in the name. Ref http://debbugs.gnu.org/10208#25, point iii).
* configure.in (standardlisppath): New output variable.
(lisppath): Use standardlisppath.
* Makefile.in (standardlisppath): New, set by configure.
(epaths-force): Use standardlisppath and locallisppath rather than lisppath.

* src/epaths.in (PATH_SITELOADSEARCH): New.
* src/lread.c (init_lread): Use PATH_SITELOADSEARCH.

* nt/paths.h (PATH_SITELOADSEARCH): New.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2012-06-30  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (standardlisppath): New output variable.
+	(lisppath): Use standardlisppath.
+	* Makefile.in (standardlisppath): New, set by configure.
+	(epaths-force): Use standardlisppath and locallisppath rather than
+	lisppath.
+
 2012-06-28  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* configure.in: Fix previous change. Remove --enable-asserts.
