--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-30  Glenn Morris  <rgm@gnu.org>
+
+	* epaths.in (PATH_SITELOADSEARCH): New.
+	* lread.c (init_lread): Use PATH_SITELOADSEARCH.
+	This is rather than relying on --enable-locallisppath elements
+	having "site-lisp" in their names.  (Bug#10208#25, 11658)
+
 2012-06-30  Eli Zaretskii  <eliz@gnu.org>
 
 	* w32proc.c (sys_select): Accept and ignore one more argument.
