--- a/lisp/url/ChangeLog
+++ b/lisp/url/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-30  Glenn Morris  <rgm@gnu.org>
+
+	* url-vars.el (mm-mime-mule-charset-alist, mm-coding-system-p):
+	Declare.
+
 2012-06-21  Chong Yidong  <cyd@gnu.org>
 
 	* url.el (url-retrieve-internal): Fix last change (Bug#11627).
