--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-30  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in (CTAGS_CFLAGS): Remove EMACS_NAME;
+	already defined in ETAGS_CFLAGS.
+
 2012-06-27  Glenn Morris  <rgm@gnu.org>
 
 	* makefile.w32-in (lisp2): Remove paths.el.
