--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-07-01  Eli Zaretskii  <eliz@gnu.org>
+
+	* files.el (file-relative-name): Compare file names
+	case-insensitively if on MS-Windows or MS-DOS, or if
+	read-file-name-completion-ignore-case is non-nil.  Don't use
+	case-fold-search for this purpose.  (Bug#11827)
+
 2012-06-28  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* calendar/cal-dst.el (calendar-current-time-zone): Return
